Bug 561243 - Name field in edit bookmarks panel ignores mouse events while focused. r=roc, a=blocking